# gynx

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: gnx-config.cmake.in
doc/: quickstart.md
include/gnx/: concepts.hpp  execution.hpp  memory.hpp  sq.hpp  sq_view.hpp  visitor.hpp
include/gnx/algorithms/: compare.hpp  local_align.hpp  random.hpp  valid.hpp
include/gnx/io/: fastaqz.hpp
include/gnx/lut/: blosum.hpp  pam.hpp  phred33.hpp  phred64.hpp  valid.hpp
include/gynx/: concepts.hpp  execution.hpp  memory.hpp  sq.hpp
include/gynx/algorithms/: random.hpp  valid.hpp
include/gynx/io/: fastaqz.hpp
include/gynx/lut/: valid.hpp
perf/: CMakeLists.txt  benchmarks.cpp
perf/results/: mi300a_rocm.txt
test/: CMakeLists.txt  unit_tests.cpp
